kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lyrics
  name: lyrics-service
  namespace: default
  resourceVersion: "1582"
  selfLink: /api/v1/namespaces/default/services/lyrics-service
spec:
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 32600
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: lyrics
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
